// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`switch (1) 1`] = `
"---
switch (expr) {
  case "Oranges":
    console.log("Oranges");
    break;
  case "Mangoes":
  case "Papayas":
    console.log("Mangoes and papayas");
    break;
  default:
    console.log(expr);
}
---

<script>
  switch (expr) {
    case "Oranges":
      console.log("Oranges");
      break;
    case "Mangoes":
    case "Papayas":
      console.log("Mangoes and papayas");
      break;
    default:
      console.log(expr);
  }
</script>
"
`;

exports[`switch (2) - case with block 1`] = `
"---
switch (action) {
  case "say_hello": {
    const message = "hello";
    console.log(message);
    break;
  }
  case "say_hi": {
    const message = "hi";
    console.log(message);
    break;
  }
  default: {
    console.log("Empty action received.");
  }
}
---

<script>
  switch (action) {
    case "say_hello": {
      const message = "hello";
      console.log(message);
      break;
    }
    case "say_hi": {
      const message = "hi";
      console.log(message);
      break;
    }
    default: {
      console.log("Empty action received.");
    }
  }
</script>
"
`;

exports[`switch (3) - complex expression 1`] = `
"---
switch (expr.toLowerCase()) {
  case "oranges":
    console.log("oranges");
    break;
  case "mangoes":
  case "papayas":
    console.log("mangoes and papayas");
    break;
  default:
    console.log(expr);
}
---

<script>
  switch (expr.toLowerCase()) {
    case "oranges":
      console.log("oranges");
      break;
    case "mangoes":
    case "papayas":
      console.log("mangoes and papayas");
      break;
    default:
      console.log(expr);
  }
</script>
"
`;

exports[`switch (4) - more complex expression 1`] = `
"---
switch (
  String(expr)
    .split("")
    .map((x) => x)
    .join("")
    .toUpperCase()
    .toLowerCase()
) {
  case "oranges":
    console.log("oranges");
    break;
  case "mangoes":
  case "papayas":
    console.log("mangoes and papayas");
    break;
  default:
    console.log(expr);
}
---

<script>
  switch (
    String(expr)
      .split("")
      .map((x) => x)
      .join("")
      .toUpperCase()
      .toLowerCase()
  ) {
    case "oranges":
      console.log("oranges");
      break;
    case "mangoes":
    case "papayas":
      console.log("mangoes and papayas");
      break;
    default:
      console.log(expr);
  }
</script>
"
`;
